# proxyvars

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  ci.yml  publish.yml
src/: lib.rs  no_proxy.rs
